[package]
name = "timer_macro"
version = "0.0.0"
authors = ["Richard Zak <richard.j.zak@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[features]
default = []
release = []

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }

