[package]
name = "code-timing-macros"
version = "0.0.7"
authors = ["Richard Zak <richard.j.zak@gmail.com>"]
description = "Macros for easily measuring execution time of various code pieces"
repository = "https://github.com/rjzak/code-timing-macros"
keywords = ["proc_macro", "profiling", "timing"]
categories = ["development-tools"]
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[features]
default = []
release = []
tracing = []

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "3.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = { version = "0.1", default-features = false }

